--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; URL=https://anymeeting.page.link/test1">
+    <!-- <meta http-equiv="refresh" content="0; URL=https://anymeeting.page.link/test1"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello world!</title>
 </head>
 <body>
     <h1>Hello world!</h1>
+
+    <script> 
+        window.onload = function exampleFunction() {             
+            console.log('The Script will load now.');
+            alert('Hello!');
+        } 
+    </script> 
 </body>
 </html>
