--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script> 
         window.onload = function exampleFunction() {             
             console.log('The Script will load now.');
-            alert('Hello!');
+            window.location.href = "http://www.w3schools.com";
         } 
     </script> 
 </body>
