Try another redirect

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <!-- <meta http-equiv="refresh" content="0; URL=https://anymeeting.page.link/test1"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello world!</title>
+    <script>
+        window.location.href = "https://sfumobile.intermedia.net/ikokoev";
+    </script>
 </head>
 <body>
     <h1>Hello world!</h1>
 
-    <script> 
+    <!-- <script> 
         window.onload = function exampleFunction() {             
             console.log('The Script will load now.');
-            window.location.href = "https://mobile.anymeeting.com/ikokoev";
+            window.location.href = "https://sfumobile.intermedia.net/ikokoev";
         } 
-    </script> 
+    </script>  -->
 </body>
 </html>
