--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta http-equiv="refresh" content="0; URL=https://anymeeting.page.link/test1"> -->
+    <!-- <meta http-equiv="refresh" content="0; URL=https://anymeetingapp.page.link/ikokoev"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello world!</title>
     <script>
-        window.location.href = "https://sfumobile.intermedia.net/ikokoev";
+        window.location.href = "https://anymeetingapp.page.link/ikokoev";
     </script>
 </head>
 <body>
